# job-system

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: bench_main.cpp
include/: job_system.h
src/: deque.h  job_system.cpp  worker.cpp  worker.h
tests/: test_all.cpp
